--- a/microservicecloud-consumer-dept-feign/pom.xml
+++ b/microservicecloud-consumer-dept-feign/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>microservicecloud-consumer-dept-80</artifactId>
-    <description>部门微服务消费者</description>
+    <artifactId>microservicecloud-consumer-dept-feign</artifactId>
 
     <dependencies>
         <dependency>
@@ -31,6 +30,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
